--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,4 +2,4 @@ name: D-G-N-C-J
 desc: 支持多个娱乐功能
 version: v1.0.0
 author: Tinyxi
-repo: https://github.com/520TinyXI/d-g-n-c-j.git
+repo: https://github.com/TinyAII/Large-model-bot.git
